fix: don't wrap text too soon in Alert component

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1359,9 +1359,6 @@ a.c-btn {
   margin-right: 1rem;
   margin-inline-end: 1rem; }
 
-.alert__text {
-  flex: 1 1 60ch; }
-
 .alert__icon {
   color: inherit;
   position: relative;
