--- a/src/assets/scss/components/alert.scss
+++ b/src/assets/scss/components/alert.scss
@@ -75,20 +75,12 @@
     margin-inline-end: 1rem;
 }
 
-.alert__text {
-    flex: 1 1 60ch;
-}
-
 .alert__icon {
     color: inherit;
     position: relative;
     margin-right: .75rem;
     margin-inline-end: .75rem;
     margin-top: -4px;
-}
-
-.alert__text {
-
 }
 
 .alert__type {
